--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,107 @@
-<!DOCTYPE html><html lang="en"><head>
-  <script src="p5.js"></script>
-  <script src="p5.sound.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <meta charset="utf-8">
-  <title>Calculadora de complejos</title>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <script src="p5.js"></script>
+    <script src="p5.sound.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8">
+    <title>Calculadora de complejos</title>
 </head>
 
-<body>
-  <p>Coordenadas:</p>
-  <input type="radio" name="coordenadas" id="cartesianas" checked="">
-  <label for="cartesianas">Cartesianas</label><br>
-  <input type="radio" name="coordenadas" id="polares">
-  <label for="polares">Polares</label><br>
 
-  <input type="number" class="dato" id="x1" value="0">
-  <span class="estructura"></span><br>
-  <input type="number" class="dato" id="x2" value="0">
-  <span class="estructura"></span><br>
+<body class="container row">
 
-  <input type="button" id="nuevo" value="Nuevo valor">
+    <div class="sub-container ">
+        <h3 class="text-center">Coordenadas:</h3>
+        <div class="row">
 
-  <p id="coords"></p>
-  <input type="button" id="convertir" value=""><br>
-  
-  <input type="checkbox" class="operacion" id="o_sumar">
-  <label for="o_sumar">Sumar: Z1+Z2+Z3+...+Zn</label><br>
-  <input type="checkbox" class="operacion" id="o_restar">
-  <label for="o_restar">Restar: Z1-Z2-Z3-...-Zn</label><br>
-  <input type="checkbox" class="operacion" id="o_multiplicar">
-  <label for="o_multiplicar">Multiplicar: Z1*Z2*Z3*...*Zn</label><br>
-  <input type="checkbox" class="operacion" id="o_dividir">
-  <label for="o_dividir">Dividir: (((Z1/Z2)/Z3)/...)/Zn</label><br>
-  <input type="button" id="operar" value="Operar" onclick="operar()">
-  <p id="resultado"></p>
-    
-  <p>i^<input type="number" id="exponente" value="1" step="1">=<span id="exp_res"></span></p>
-  <script src="sketch.js"></script>
+            <div class="w-50">
+                <input type="radio" name="coordenadas" id="cartesianas" class="form-check-input" type="radio" checked>
+                <label class="form-check-label" for="cartesianas">
+              Cartesianas
+            </label>
+            </div>
+            <div class="w-50">
+                <input class="form-check-input" type="radio" name="coordenadas" id="polares">
+                <label class="form-check-label" for="polares">Polares</label>
+            </div>
 
 
-</body></html>
+        </div>
+        <br>
+        <div class="row ">
+            <div class="p-1 row m-0">
+                <input class="form-control w-50" type="number" class="dato" id="x1" value="0">
+                <span class="estructura w-50"></span><br>
+
+            </div>
+            <div class="p-1 row m-0">
+                <input class="form-control w-50" type="number" class="dato" id="x2" value="0">
+                <span class="estructura w-50"></span><br>
+            </div>
+            <input class="btn btn-secondary m-auto mt-3 w-50" type="button" id="nuevo" value="Nuevo valor">
+        </div>
+        <div class="row">
+            <!-- <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault">
+            Default checkbox
+          </label> -->
+            <p id="coords"></p>
+            <input type="button" id="convertir" class="btn btn-secondary m-auto mt-3 w-50" value=""><br>
+            <div>
+
+                <input type="checkbox" class="form-check-input operacion" id="o_sumar">
+                <label class="form-check-label" for="o_sumar">Sumar: Z1+Z2+Z3+...+Zn</label>
+
+            </div>
+
+
+            <br>
+            <div>
+                <input class="form-check-input operacion" type="checkbox" class="operacion" id="o_restar">
+                <label class="form-check-label" for="o_restar">Restar: Z1-Z2-Z3-...-Zn</label><br>
+
+            </div>
+            <div>
+                <input class="form-check-input operacion" type="checkbox" class="operacion" id="o_multiplicar">
+                <label class="form-check-label" for="o_multiplicar">Multiplicar: Z1*Z2*Z3*...*Zn</label><br>
+
+            </div>
+            <div>
+                <input class="form-check-input operacion" type="checkbox" class="operacion" id="o_dividir">
+                <label class="form-check-label" for="o_dividir">Dividir: (((Z1/Z2)/Z3)/...)/Zn</label>
+
+            </div>
+            <br>
+            <input type="button" class="btn btn-secondary m-auto mt-3 w-50" id="operar" value="Operar" onclick="operar()">
+            <p id="resultado"></p>
+
+            <p>i^<input class="form-control" type="number" id="exponente" value="1" step="1">=
+
+
+                <span id="exp_res"></span></p>
+
+
+        </div>
+
+
+    </div>
+
+
+
+</body>
+<footer class="position-absolute ">
+    <p class="m-0">Samuel Rodríguez Salamanca <small> cc: 1233893646</small></p>
+
+    <p class="m-0">Robinson Rojas Lopez
+        <small> cc: 1013692948</small>
+
+    </p>
+    <strong> Grupo: <small>30122</small></strong>
+</footer>
+
+<script src="sketch.js"></script>
+
+</html>
