se ajustas ultimos cambios

--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
 
 
 </body>
-<footer class="position-absolute ">
+<footer>
     <p class="m-0">Samuel Rodríguez Salamanca <small> cc: 1233893646</small></p>
 
     <p class="m-0">Robinson Rojas Lopez
