Input nuevo_valor correguido

--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,12 @@
         <br>
         <div class="row ">
             <div class="p-1 row m-0">
-                <input class="form-control w-50" type="number" class="dato" id="x1" value="0">
+                <input class="dato form-control w-50" type="number" id="x1" value="0">
                 <span class="estructura w-50"></span><br>
 
             </div>
             <div class="p-1 row m-0">
-                <input class="form-control w-50" type="number" class="dato" id="x2" value="0">
+                <input class="dato form-control w-50" type="number" id="x2" value="0">
                 <span class="estructura w-50"></span><br>
             </div>
             <input class="btn btn-secondary m-auto mt-3 w-50" type="button" id="nuevo" value="Nuevo valor">
